// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async AuthenticationActions login when login fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "AUTHENTICATE_FAILURE",
  },
]
`;

exports[`async AuthenticationActions login when login is successful 1`] = `
Array [
  Object {
    "type": "AUTHENTICATE_SUCCESS",
    "user": Object {
      "id": 1,
      "name": "name",
    },
  },
  Object {
    "data": Object {
      "id": "loginModal",
    },
    "type": "HIDE_MODAL",
  },
]
`;

exports[`async AuthenticationActions register when registration fails 1`] = `
Array [
  Object {
    "error": Object {
      "email": "Has already been taken",
    },
    "type": "REGISTER_FAILURE",
  },
]
`;

exports[`async AuthenticationActions register when registration is successful 1`] = `
Array [
  Object {
    "type": "REGISTER_SUCCESS",
    "user": Object {
      "email": "email@email.com",
      "id": 1,
      "name": "Bob",
    },
  },
]
`;
